[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrscene-parser"
version = "2025.12.21134443"
description = "A new package would process textual descriptions of virtual reality scenes or environments and return structured, validated outputs that describe the scene in a standardized format. It would use an LL"
readme = "README.md"
authors = [{ name = "vrscene-parser", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/vrscene-parser"
